# qsound

./: .gitignore  Makefile  main.py  mainwindow.py  pyproject.toml
assets/: Makefile  ressources.qrc
src/: main.py  settings.py
src/cue/: audiocue.py  basecue.py  fade.py  volume.py
src/designer/: Makefile  fade.ui  general.ui  main.ui  ressources.qrc  slider.ui  volume.ui
src/engine/: cuelist.py  cuelistitem.py  cuelistmodel.py  player.py
src/tests/: player.py  player2.py  test_audiocue.py  test_playercommand.py  test_volume.py
src/ui/: audiocuewidget.py  commands.py  cuelistview.py  cuewidget.py  fadewidget.py  generalwidget.py  mainwindow.py  mediafiledialog.py  slider.py  soundwiget.py  volumeslider.py  volumewidget.py
